--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,19 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;900&&family=Montserrat:wght@300;400&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&&family=Montserrat:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
-
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+			integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
+			crossorigin="anonymous"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
