--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&&family=Montserrat:wght@300;400&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&&family=Montserrat:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
 		<link
